--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -11768,7 +11768,8 @@ body {
 
 @media (min-width: 1200px) {
   .hero h1, .hero .h1 {
-    font-size: 4rem;
+    font-size: 4.4rem;
+    line-height: 1.2;
   }
 }
 .hero .lead {
