--- a/sass/main.scss
+++ b/sass/main.scss
@@ -38,7 +38,8 @@ body {
 
 @media (min-width: 1200px) {
     .hero h1 {
-        font-size: 4rem;
+        font-size: 4.4rem;
+        line-height: 1.2;
     }
 }
 
