--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -11761,7 +11761,7 @@ body {
 
 .hero h1, .hero .h1 {
   font-weight: 700;
-  color: #3d3d3d;
+  color: rgb(61, 61, 61);
   font-size: calc(1.525rem + 3.3vw);
   line-height: 1;
 }
@@ -11832,7 +11832,7 @@ body {
   }
 }
 .pl-title {
-  color: #3d3d3d;
+  color: rgb(61, 61, 61);
   font-weight: 600;
 }
 
@@ -11850,7 +11850,7 @@ body {
 }
 
 .navbar {
-  background-color: rgba(255, 255, 255, 0.7);
+  background-color: hsla(0deg, 0%, 100%, 0.7);
   -webkit-backdrop-filter: blur(24px);
   backdrop-filter: blur(24px);
 }
@@ -11858,7 +11858,7 @@ body {
 .linkText {
   text-decoration: none;
   font-weight: 500;
-  color: #3d3d3d;
+  color: rgb(61, 61, 61);
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
@@ -11879,7 +11879,7 @@ body {
 }
 
 .pl-nav-bg {
-  background-color: rgba(255, 255, 255, 0.7);
+  background-color: hsla(0deg, 0%, 100%, 0.7);
   -webkit-backdrop-filter: blur(24px);
   backdrop-filter: blur(24px);
 }
@@ -11895,9 +11895,23 @@ body {
 .pl-btn {
   background: #a85cfa;
   padding: 15px 30px;
-  border-radius: 12px;
+  border-radius: 100px;
   font-weight: 600;
   color: #fff;
+}
+
+.watch-btn {
+  background: #ECEFF2;
+  padding: 15px 30px;
+  border-radius: 100px;
+  border: none;
+  font-weight: 600;
+  color: rgb(61, 61, 61);
+}
+
+.watch-btn:hover {
+  background: #FDF2DA;
+  color: #1d1d1f;
 }
 
 .btn:focus {
