--- a/sass/main.scss
+++ b/sass/main.scss
@@ -175,9 +175,23 @@ body {
 .pl-btn {
     background: $pl-primary;
     padding: 15px 30px;
-    border-radius: 12px;
+    border-radius: 100px;
     font-weight: 600;
     color: #fff;
+}
+
+.watch-btn {
+    background: #ECEFF2;
+    padding: 15px 30px;
+    border-radius: 100px;
+    border: none;
+    font-weight: 600;
+    color: $primary-black;
+}
+
+.watch-btn:hover {
+    background: #FDF2DA;
+    color: #1d1d1f;
 }
 
 .btn:focus {
